# hexmap

./: .gitignore  Cargo.toml  Trunk.toml  index.html
.github/workflows/: pages.yml
assets/: settlement_names.csv
lib/worldgen/: Cargo.toml
lib/worldgen/src/: cylinder.rs  lib.rs  settlements.rs  world.rs
lib/worldgen/src/terrain/: mod.rs  noise.rs  world.rs
src/: main.rs
src/camera/: mod.rs  systems.rs  types.rs
src/input/: mod.rs  systems.rs
src/profiling/: detail.rs  mod.rs
src/selection/: debug.rs  mod.rs  systems.rs  types.rs
src/ui/: mod.rs  settlement.rs
src/world/: assets.rs  generation.rs  mod.rs  names.rs  systems.rs  types.rs
web/: index.html
