[package]
name = "hexmap"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["lib/worldgen"]

[workspace.dependencies]
hexx = "0.20.0"
noise = "0.9.0"
rand = "0.9.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[features]
debug_ui = ["dep:iyes_perf_ui", "bevy/default_font"]
profiling = ["debug_ui"]
remote = ["bevy/bevy_remote"]
all = ["profiling", "remote"]

[dependencies]
# Workspace dependencies
hexmap_worldgen = {path = "lib/worldgen"}

# Core dependencies
hexx.workspace = true
rand.workspace = true

# Profiling dependencies
iyes_perf_ui = {version = "0.5.0", optional=true}

[dependencies.bevy]
version = "0.16.0"
default-features = false
features = [
    # Core bevy components
    "bevy_gizmos",
    "bevy_sprite",
    "bevy_winit",
    "multi_threaded",
    
    # Platform specific (unix)
    "x11",
]

[target.'cfg(target_arch = "wasm32")'.dependencies.bevy]
version = "0.16.0"
default-features = false
features = [
    # Core bevy components
    "bevy_gizmos",
    "bevy_sprite",
    "bevy_winit",
    "multi_threaded",

    # Platform specific
    "web",
    "webgl2",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.3.3", features = ["wasm_js"]}
